# rust-serde-trait-object-demo

./: Cargo.toml  README.md
src/: config.rs  config_enum.rs  config_hashmap.rs  config_struct.rs  config_struct_boxed_trait.rs  main.rs
