[package]
name = "serde-trait-object-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

chrono = "0.4.26"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.104"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
anyhow = { version = "1.0.72", features = ["backtrace"] }
env_logger = "0.10.0"
log = { version = "0.4.20", features = ["kv_unstable", "kv_unstable_serde"] }
thiserror = "1.0.44"
dyn-clone = "1.0.12"
futures = "0.3.28"
tokio-util = {version="0.7", features = ["codec"]}
bytes = "1.4.0"
erased-serde = "0.3.29"
typetag = "0.2.13"
